--- a/examples/lowrouter-compose/src/style.css
+++ b/examples/lowrouter-compose/src/style.css
@@ -13,11 +13,9 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-
   font-size: 4rem;
   text-align: center;
 }
-
 
 body {
   margin: 0;
@@ -54,6 +52,9 @@ button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+.stack > * {
+  position: absolute;
+}
 
 a {
   font-weight: 500;
