--- a/examples/lowrouter-compose/src/index.css
+++ b/examples/lowrouter-compose/src/index.css
@@ -22,6 +22,7 @@ body {
   display: flex;
   place-items: center;
   min-height: 100vh;
+  overflow: hidden;
 }
 
 #root {
@@ -37,7 +38,7 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 1em;
+  font-size: 0.5rem;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -45,13 +46,21 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: #646cff;
+  border-color: black;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+a {
+  font-weight: 500;
+  color: black;
+  text-decoration: inherit;
+}
+a:hover {
+//  color: black;
+}
 
 nav {
   position: relative;
@@ -60,18 +69,33 @@ nav {
 
 .stack > * {
   width: 100vw;
-  top:0;
+  top: 0;
   left: 0;
   height: 100vh;
-
   position: absolute;
 }
 
-a {
-  font-weight: 500;
-  color: #646cff;
-  text-decoration: inherit;
+.content {
+  overflow: hidden;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  font-size: 4rem;
+  padding-top: 5rem;
+  font-weight: bold;
+  color: black;
+  opacity: 0.1;
 }
-a:hover {
-  color: #535bf2;
+
+.Home {
+  background-color: #38646e;
+}
+
+.About {
+  background-color: #d35c5c;
+}
+
+.Contact {
+  background-color: #4f5dea;
 }
