--- a/examples/lowrouter-compose/src/index.css
+++ b/examples/lowrouter-compose/src/index.css
@@ -76,13 +76,13 @@ nav {
 }
 
 .content {
-  overflow: hidden;
-  position: absolute;
-  top: 50%;
-  left: 50%;
-  transform: translate(-50%, -50%);
+  /*overflow: hidden;*/
+  width: 100%;
+  /*position: absolute;*/
+  /*top: 50%;*/
+  /*left: 50%;*/
+  /*transform: translate(-50%, -50%);*/
   font-size: 4rem;
-  padding-top: 5rem;
   font-weight: bold;
   color: black;
   opacity: 0.1;
