--- a/examples/react-nested-routes/src/index.css
+++ b/examples/react-nested-routes/src/index.css
@@ -12,6 +12,7 @@
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
+  font-size: 2rem;
 }
 
 a {
@@ -23,6 +24,9 @@ a:hover {
   color: #535bf2;
 }
 
+button {
+  font-size: 1rem;
+}
 body {
   margin: 0;
   display: flex;
