--- a/examples/custom-path-to-regexp/src/style.css
+++ b/examples/custom-path-to-regexp/src/style.css
@@ -13,16 +13,17 @@
   -moz-osx-font-smoothing: grayscale;
   -webkit-text-size-adjust: 100%;
 
-  font-size: 2rem;
+
+  font-size: 4rem;
   text-align: center;
 }
+
 
 body {
   margin: 0;
   display: flex;
   place-items: center;
   min-height: 100vh;
-  overflow: hidden;
 }
 
 #root {
@@ -38,7 +39,7 @@ button {
   border-radius: 8px;
   border: 1px solid transparent;
   padding: 0.6em 1.2em;
-  font-size: 0.5rem;
+  font-size: 1em;
   font-weight: 500;
   font-family: inherit;
   background-color: #1a1a1a;
@@ -46,57 +47,19 @@ button {
   transition: border-color 0.25s;
 }
 button:hover {
-  border-color: black;
+  border-color: #646cff;
 }
 button:focus,
 button:focus-visible {
   outline: 4px auto -webkit-focus-ring-color;
 }
 
+
 a {
   font-weight: 500;
-  color: black;
+  color: #646cff;
   text-decoration: inherit;
 }
-
-nav {
-  position: relative;
-  z-index: 1;
-}
-
-.stack > * {
-  width: 100vw;
-  top: 0;
-  left: 0;
-  height: 100vh;
-  position: absolute;
-}
-
-.content {
-  /*overflow: hidden;*/
-  width: 100%;
-  position: absolute;
-  top: 50%;
-  /*left: 50%;*/
-  /*transform: translate(-50%, -50%);*/
-  font-size: 4rem;
-  font-weight: bold;
-  color: black;
-  opacity: 0.1;
-}
-
-.Home {
-  background-color: #38646e;
-}
-
-.About {
-  background-color: #d35c5c;
-}
-
-.Contact {
-  background-color: #4f5dea;
-}
-
-.Home_button {
-  display: none;
+a:hover {
+  color: #535bf2;
 }
